--- a/1-D vibrating string.ipynb
+++ b/1-D vibrating string.ipynb
@@ -1,118 +1,142 @@
 {
-  "metadata": {
-    "kernelspec": {
-      "name": "python",
-      "display_name": "Python (Pyodide)",
-      "language": "python"
-    },
-    "language_info": {
-      "codemirror_mode": {
-        "name": "python",
-        "version": 3
-      },
-      "file_extension": ".py",
-      "mimetype": "text/x-python",
-      "name": "python",
-      "nbconvert_exporter": "python",
-      "pygments_lexer": "ipython3",
-      "version": "3.8"
-    }
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The lagrange equations for the string is\n",
+    "$$\n",
+    "\\mathcal{L}=\\frac{1}{2}\\sigma (\\partial_t\\phi)^2 - \\frac{1}{2}\\tau (\\partial_x\\phi)^2\n",
+    "$$\n",
+    "where $\\sigma$ and $\\tau$ are the linear mass densities and tension, respectively.\n",
+    "Recall that the lagrange eqns for the 1-D field are given as\n",
+    "$$\\partial_t(\\partial_{\\dot{\\phi}}\\mathcal{L})+\\partial_x(\\partial_{{\\phi}'}\\mathcal{L})-\\partial_{\\phi}\\mathcal{L}=0\n",
+    "$$\n",
+    "The computations of the field eqns can be encoded in the following way:"
+   ]
   },
-  "nbformat_minor": 4,
-  "nbformat": 4,
-  "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as smp\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#defining the symbols\n",
+    "t, x = smp.symbols('t x')\n",
+    "sigma, tau, phi, L = smp.symbols(r'\\sigma \\tau \\phi \\mathcal{L}')\n",
+    "L = smp.symbols(r'\\mathcal{L}', cls=smp.Function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "phi = phi(x,t)\n",
+    "phi_t = smp.diff(phi, t)\n",
+    "phi_x = smp.diff(phi, x)\n",
+    "phi_tt = smp.diff(phi_t, t)\n",
+    "phi_xx = smp.diff(phi_x, x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now defining the Lagrangian density as $\\mathcal{L}=T-U$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "T = smp.Rational(1,2) * sigma* (phi_t)**2 \n",
+    "U = smp.Rational(1,2) * tau *  (phi_x)**2\n",
+    "L = T - U"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now one can get the field equation as"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "LE =  smp.diff(smp.diff(L, phi_t), t).simplify()  + smp.diff(smp.diff(L, phi_x), x).simplify() - smp.diff(L, phi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
     {
-      "cell_type": "markdown",
-      "source": "The lagrange equations for the string is\n$$\n\\mathcal{L}=\\frac{1}{2}\\sigma (\\partial_t\\phi)^2 - \\frac{1}{2}\\tau (\\partial_x\\phi)^2\n$$\nwhere $\\sigma$ and $\\tau$ are the linear mass densities and tension, respectively.\nRecall that the lagrange eqns for the 1-D field are given as\n$$\\partial_t(\\partial_{\\dot{\\phi}}\\mathcal{L})+\\partial_x(\\partial_{{\\phi}'}\\mathcal{L})-\\partial_{\\phi}\\mathcal{L}=0\n$$\nThe computations of the field eqns can be encoded in the following way:",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "import sympy as smp\nimport numpy as np",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 97
-    },
-    {
-      "cell_type": "code",
-      "source": "#defining the symbols\nt, x = smp.symbols('t x')\nS, u, phi, L = smp.symbols(r'\\sigma \\tau \\phi \\mathcal{L}', cls=smp.Function)",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 98
-    },
-    {
-      "cell_type": "code",
-      "source": "phi = phi(x,t)\nphi_t = smp.diff(phi, t)\nphi_x = smp.diff(phi, x)\nphi_tt = smp.diff(phi_t, t)\nphi_xx = smp.diff(phi_x, x)",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 99
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Now defining the Lagrangian density as $\\mathcal{L}=T-U$",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "T = smp.Rational(1,2)  * (phi_t)**2 \nU = smp.Rational(1,2) *  (phi_x)**2\nL = T - U",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 100
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Now one can get the field equation as",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "LE =  smp.diff(smp.diff(L, phi_t), t).simplify()  + smp.diff(smp.diff(L, phi_x), x).simplify() - smp.diff(L, phi) ",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": 101
-    },
-    {
-      "cell_type": "code",
-      "source": "LE",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [
-        {
-          "execution_count": 102,
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": "Derivative(\\phi(x, t), (t, 2)) - Derivative(\\phi(x, t), (x, 2))",
-            "text/latex": "$\\displaystyle \\frac{\\partial^{2}}{\\partial t^{2}} \\phi{\\left(x,t \\right)} - \\frac{\\partial^{2}}{\\partial x^{2}} \\phi{\\left(x,t \\right)}$"
-          },
-          "metadata": {}
-        }
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\sigma \\frac{\\partial^{2}}{\\partial t^{2}} \\phi{\\left(x,t \\right)} - \\tau \\frac{\\partial^{2}}{\\partial x^{2}} \\phi{\\left(x,t \\right)}$"
       ],
-      "execution_count": 102
-    },
-    {
-      "cell_type": "markdown",
-      "source": "Setting the LE=0 gives the wave equation, as expected:\n$$\n\\partial^2_t\\phi(x,t)=\\partial^2_x\\phi(x,t)\n$$\nNote that the propagation speed has been set to 1. Hint: Natural Units.",
-      "metadata": {}
-    },
-    {
-      "cell_type": "code",
-      "source": "",
-      "metadata": {
-        "trusted": true
-      },
-      "outputs": [],
-      "execution_count": null
+      "text/plain": [
+       "\\sigma*Derivative(\\phi(x, t), (t, 2)) - \\tau*Derivative(\\phi(x, t), (x, 2))"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
     }
-  ]
+   ],
+   "source": [
+    "LE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Setting the LE=0 gives the wave equation, as expected:\n",
+    "$$\n",
+    "\\frac{\\partial^2_t\\phi(x,t)}{\\tau/\\sigma}=\\partial^2_x\\phi(x,t)\n",
+    "$$"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
