Update 1-D vibrating string.ipynb

--- a/1-D vibrating string.ipynb
+++ b/1-D vibrating string.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The lagrange equations for the string is\n",
+    "The lagrangian (density) for the string is\n",
     "$$\n",
     "\\mathcal{L}=\\frac{1}{2}\\sigma (\\partial_t\\phi)^2 - \\frac{1}{2}\\tau (\\partial_x\\phi)^2\n",
     "$$\n",
@@ -33,8 +33,8 @@
    "source": [
     "#defining the symbols\n",
     "t, x = smp.symbols('t x')\n",
-    "sigma, tau, phi, L = smp.symbols(r'\\sigma \\tau \\phi \\mathcal{L}')\n",
-    "L = smp.symbols(r'\\mathcal{L}', cls=smp.Function)"
+    "sigma, tau = smp.symbols(r'\\sigma \\tau')\n",
+    "L, phi = smp.symbols(r'\\mathcal{L} \\phi', cls=smp.Function)"
    ]
   },
   {
