Update 1-D vibrating string.ipynb

--- a/1-D vibrating string.ipynb
+++ b/1-D vibrating string.ipynb
@@ -45,9 +45,7 @@
    "source": [
     "phi = phi(x,t)\n",
     "phi_t = smp.diff(phi, t)\n",
-    "phi_x = smp.diff(phi, x)\n",
-    "phi_tt = smp.diff(phi_t, t)\n",
-    "phi_xx = smp.diff(phi_x, x)"
+    "phi_x = smp.diff(phi, x)\n"
    ]
   },
   {
