Update 1-D vibrating string.ipynb

--- a/1-D vibrating string.ipynb
+++ b/1-D vibrating string.ipynb
@@ -21,8 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sympy as smp\n",
-    "import numpy as np"
+    "import sympy as smp\n"
    ]
   },
   {
